readme dosyasi ve css odev gorseli eklendi

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
+<!-- language=tr -->
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İletişim</title>
+<!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
+<!-- start body codes -->
 <body>
+<!-- noscript code -->
+    <noscript>Bu browser javascripti desteklemiyor.</noscript>
+<!-- start navbar codes -->
     <nav>
         <ul>
             <li><a href="index.html">Ana Sayfa</a></li>
@@ -14,13 +20,17 @@
             <li><a href="https://www.linkedin.com/in/melishosman88/">LinkedIn</a></li>
         </ul>
     </nav>
+<!-- end navbar codes -->
+<!-- start header codes -->
     <header>
         <div class="header2"></div>
     </header>
+<!-- end header codes -->
+<!-- start footer codes --> 
     <footer>
         <p style="text-align: center; margin-top: 100px; margin-bottom: 60px;">© Tüm Hakları Saklıdır.</p>
     </footer>
-
-    
+<!-- end footer codes -->   
 </body>
+<!-- end body codes -->
 </html>
