--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melis Hoşman</title>
-    
+<!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <!-- start body codes -->
 <body>
-    <!-- noscript code -->
+<!-- noscript code -->
     <noscript>Bu browser javascripti desteklemiyor.</noscript> 
-    <!-- start nav codes -->
+<!-- start navbar codes -->
     <nav>
         <ul>
             <li><a href="index.html">Ana Sayfa</a></li>
@@ -20,13 +20,13 @@
             <li class="dropdo"><a href="contact.html">İletişim</a></li>           
         </ul>        
     </nav> 
-    <!-- end nav codes -->
-    <!-- start header codes -->
+<!-- end navbar codes -->
+<!-- start header codes -->
     <header>       
         <div class="header1"></div>
     </header>
-    <!-- end header codes -->
-    <!-- start main codes --> 
+<!-- end header codes -->
+<!-- start main codes --> 
     <main>
         <section>
             <article>
@@ -35,8 +35,7 @@
                 </div>
                 <div class="baslik2">
                     <h3 style="margin-top: 5px;">Merhaba</h3>
-                </div>
-                
+                </div>              
                 <div class="box-1">
                     <p>
                         Ben Melis Hoşman. Yazılım sektörüne ilk adımımı atışım kurumsal iş deneyimimle başladığını söyleyebilirim. Zorlu Center’da Alcatel-Lucent bünyesinde sistem mühendisi pozisyonunda, otomasyon(üstentegrasyon) bölümünde görev aldım. Daha sonra Vodafone, N11 gibi büyük şirketlerde farklı pozisyonlarda çalıştım.
@@ -45,12 +44,12 @@
             </article>
         </section>
     </main>
-    <!-- end main codes -->
-    <!-- start footer codes --> 
+<!-- end main codes -->
+<!-- start footer codes --> 
     <footer>
         <p style="text-align: center; margin-top: 70px; margin-bottom: 60px;">© Tüm Hakları Saklıdır.</p>
     </footer>
-    <!-- end footer codes -->
+<!-- end footer codes -->
 </body>
 <!-- end body codes -->
 </html>
