--- a/about-me.html
+++ b/about-me.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
+<!-- language=tr -->
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hakkımda</title>
+<!-- CSS stylesheet -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-
 </head>
+<!-- start body codes -->
 <body>
+<!-- noscript code -->
+    <noscript>Bu browser javascripti desteklemiyor.</noscript>
+<!-- start navbar codes -->
     <nav>
         <ul>
             <li><a href="index.html">Ana Sayfa</a></li>
             <li class="dropdo"><a href="contact.html">İletişim</a></li>           
-        </ul>        
+        </ul> 
+    </nav>
+<!-- end navbar codes -->
+<!-- start header codes -->
     <header>
         <div class="header3"></div>
     </header>
+<!-- end header codes -->
+<!-- start main codes --> 
     <main>
         <section>
             <article>
                 <h1 class="aboutme_baslik">Hakkımda</h1>
                 <div class="box-1">
                     <p>
-                        Merhaba. Ben Melis Hoşman. Tekirdağ Namık Kemal Üniversitesi Ziraat Mühendisliği bölümünü bitirdikten sonra yazılıma olan ilgimi fark edip Anadolu Üniversitesi Web Tasarım ve Kodlama bölmünden mezun oldum. İngilizce hazırlık sınıfı okudum. Sırasıyla; Alcatel-Lucent, Vodafone, Artı ve Artı Teknoloji Hizmetleri ve N11'de görev aldım. Yazılıma tutkumdan dolayı full stack web geliştirme alanında öğrenimime devam edip, bu alanda çalışmalar yapıyorum. Ayrıca içerik yazarlığı, grafik tasarım ve sanatla ilgileniyorum. 
+                        Merhaba. Ben Melis Hoşman. Tekirdağ Namık Kemal Üniversitesi Ziraat Mühendisliği bölümünü bitirdikten sonra yazılıma olan ilgimi fark edip Anadolu Üniversitesi Web Tasarım ve Kodlama bölümünden mezun oldum. İngilizce hazırlık sınıfı okudum. Sırasıyla; Alcatel-Lucent, Vodafone, Artı ve Artı Teknoloji Hizmetleri ve N11'de görev aldım. Yazılıma tutkumdan dolayı full stack web geliştirme alanında öğrenimime devam edip, bu alanda çalışmalar yapıyorum. Ayrıca içerik yazarlığı, grafik tasarım ve sanatla ilgileniyorum. 
                     </p>
                 </div>
             </article>
         </section>
     </main>
+<!-- end main codes -->
+<!-- start footer codes --> 
     <footer>
         <p style="text-align: center; margin-top: 100px; margin-bottom: 60px;">© Tüm Hakları Saklıdır.</p>
     </footer>
+<!-- end footer codes -->
 </body>
+<!-- end body codes -->
 </html>
